fixed header z-index issue

--- a/css/style.css
+++ b/css/style.css
@@ -79,10 +79,12 @@ body {
   font-family: var(--font-base);
 }
 .header {
+  position: relative;
   background-color: var(--primary-color);
   color: var(--white-color);
   font-family: var(--font-family);
   font-size: var(--font-small);
+  z-index: 9999;
 }
 
 .header-top {
